--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "my-app",
+  "homepage": "https://sefyan0hack.github.io/Cosmetic-Imane",
+  "name": "store-imane",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d .next",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
